Make hashing tests Java 8 compatible